fix(01-01): add mobile viewport CSS reset
- Add overflow-x: hidden to html, body to prevent horizontal scroll
- Add text-size-adjust: 100% to prevent iOS text scaling issues
- Constrain img, video, iframe to max-width: 100%

--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
 
         html {
             scroll-behavior: smooth;
+            -webkit-text-size-adjust: 100%;
+            text-size-adjust: 100%;
+        }
+
+        /* Mobile viewport fixes */
+        html, body {
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
+        img, video, iframe {
+            max-width: 100%;
+            height: auto;
         }
 
         @media (prefers-reduced-motion: reduce) {
