feat(01-01): add touch target minimum sizes
- Add 44px minimum height/width for all interactive elements
- Set font-size: 16px on form inputs to prevent iOS auto-zoom
- Add touch-action: manipulation to remove 300ms tap delay
- Add webkit-tap-highlight-color for mobile tap feedback

--- a/index.html
+++ b/index.html
@@ -183,6 +183,29 @@
             height: auto;
         }
 
+        /* Touch target accessibility - 44px minimum for tappable elements */
+        a, button, [role="button"],
+        input[type="submit"], input[type="button"], input[type="reset"],
+        .btn, .nav-link, .nav-cta, .mobile-toggle,
+        .year-tab, .package-card, .faq-question {
+            min-height: 44px;
+            min-width: 44px;
+        }
+
+        /* Ensure form inputs meet touch target and prevent iOS zoom */
+        input, textarea, select, button {
+            font-size: 16px; /* Explicit 16px prevents iOS auto-zoom on focus */
+            min-height: 44px;
+            touch-action: manipulation; /* Removes 300ms tap delay */
+        }
+
+        /* Improve tap feedback on mobile */
+        @media (hover: none) and (pointer: coarse) {
+            a, button, .btn {
+                -webkit-tap-highlight-color: rgba(124, 58, 237, 0.2);
+            }
+        }
+
         @media (prefers-reduced-motion: reduce) {
             html { scroll-behavior: auto; }
             *, *::before, *::after {
