--- a/index.html
+++ b/index.html
@@ -2983,6 +2983,21 @@
             .hero { padding: 100px 0 60px; }
             .hero h1 { font-size: 2.25rem; }
 
+            .hero-buttons {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            .hero-buttons .btn {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .hero-buttons .btn-primary {
+                padding: 16px 24px;
+                font-size: 1.1rem;
+            }
+
             section { padding: 60px 0; }
 
             .team-grid { grid-template-columns: 1fr; }
