--- a/index.html
+++ b/index.html
@@ -2348,6 +2348,88 @@
             visibility: visible;
         }
 
+        /* Sticky Mobile CTA Bar */
+        .sticky-cta-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 950;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border-top: 1px solid var(--gray-200);
+            padding: 12px 16px;
+            padding-bottom: calc(12px + env(safe-area-inset-bottom, 0px));
+            transform: translateY(100%);
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            will-change: transform;
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .sticky-cta-bar.visible {
+            transform: translateY(0);
+        }
+
+        .sticky-cta-container {
+            display: flex;
+            gap: 12px;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        .sticky-cta-button {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 48px;
+            padding: 14px 24px;
+            background: linear-gradient(135deg, var(--purple-600), var(--purple-700));
+            color: white;
+            font-family: var(--font-display);
+            font-weight: 600;
+            font-size: 1rem;
+            border-radius: 100px;
+            text-decoration: none;
+            box-shadow: 0 4px 14px rgba(124, 58, 237, 0.4);
+            transition: all 0.2s ease;
+        }
+
+        .sticky-cta-button:hover {
+            background: linear-gradient(135deg, var(--purple-700), var(--purple-800));
+            transform: translateY(-1px);
+        }
+
+        .sticky-cta-phone {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 6px;
+            min-width: 48px;
+            min-height: 48px;
+            padding: 14px 16px;
+            background: var(--gray-100);
+            color: var(--purple-700);
+            font-family: var(--font-display);
+            font-weight: 600;
+            font-size: 1rem;
+            border-radius: 100px;
+            text-decoration: none;
+            transition: all 0.2s ease;
+        }
+
+        .sticky-cta-phone:hover {
+            background: var(--purple-100);
+        }
+
+        /* Hide sticky bar on desktop */
+        @media (min-width: 769px) {
+            .sticky-cta-bar {
+                display: none;
+            }
+        }
+
         /* FAQ Section */
         .faq { background: var(--gray-50); }
 
@@ -5340,6 +5422,17 @@
                 <a href="#contact" class="btn btn-primary">Start Your Free Trial →</a>
             </div>
         </section>
+
+        <!-- Sticky Mobile CTA Bar -->
+        <div class="sticky-cta-bar" id="sticky-cta-bar" aria-hidden="true">
+            <div class="sticky-cta-container">
+                <a href="tel:+61491791447" class="sticky-cta-phone" aria-label="Call BEAM Academy">
+                    <span aria-hidden="true">📞</span>
+                    <span class="sticky-cta-phone-text">Call</span>
+                </a>
+                <a href="#contact" class="sticky-cta-button">Book Free Trial</a>
+            </div>
+        </div>
     </main>
 
     <!-- Floating Contact Button -->
