feat(03-01): update submit button text and enhance styling
- Change button text from 'Book Free Trial' to 'Book Your Free Trial'
- Add min-height: 52px for mobile prominence (exceeds 44px minimum)
- Add font-weight: 600 for better visibility

--- a/index.html
+++ b/index.html
@@ -4276,8 +4276,10 @@
             background: var(--purple-700) !important;
             color: white !important;
             width: 100%;
+            min-height: 52px;
             padding: 1rem 2rem;
             font-size: 1.1rem;
+            font-weight: 600;
         }
 
         .btn-pay .btn-text,
@@ -5365,7 +5367,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary form-submit btn-trial" id="trialSubmitBtn" style="display: flex;">
-                            <span class="btn-text"><span id="submitBtnText">Book Free Trial</span> →</span>
+                            <span class="btn-text"><span id="submitBtnText">Book Your Free Trial</span> →</span>
                             <span class="btn-loading"><span class="spinner"></span> Processing...</span>
                         </button>
                         
