--- a/index.html
+++ b/index.html
@@ -1240,6 +1240,62 @@
             }
         }
 
+        /* 320px small screen pricing fix */
+        @media (max-width: 400px) {
+            .pricing-tier-new {
+                padding: 24px 16px;
+                border-radius: 12px;
+            }
+
+            .tier-name {
+                font-size: 1.25rem;
+            }
+
+            .tier-price-main .price-amount {
+                font-size: 2rem;
+            }
+
+            .tier-price-main .price-from,
+            .tier-price-main .price-period {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages li {
+                font-size: 0.9rem;
+                padding: 10px 12px;
+            }
+
+            .tier-packages .pkg-name {
+                font-size: 0.9rem;
+            }
+
+            .tier-packages .pkg-price {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages .pkg-save {
+                font-size: 0.7rem;
+                padding: 2px 6px;
+            }
+
+            .tier-cta {
+                font-size: 0.9rem;
+                padding: 14px 20px;
+            }
+
+            /* All Access hero card */
+            .all-access-hero {
+                padding: 20px 16px;
+            }
+
+            .all-access-hero-title {
+                font-size: 1.25rem;
+            }
+
+            .all-access-price {
+                font-size: 1.5rem;
+            }
+        }
 
         .pricing-tiers {
             display: grid;
@@ -2803,6 +2859,62 @@
             }
         }
 
+        /* 320px small screen pricing fix */
+        @media (max-width: 400px) {
+            .pricing-tier-new {
+                padding: 24px 16px;
+                border-radius: 12px;
+            }
+
+            .tier-name {
+                font-size: 1.25rem;
+            }
+
+            .tier-price-main .price-amount {
+                font-size: 2rem;
+            }
+
+            .tier-price-main .price-from,
+            .tier-price-main .price-period {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages li {
+                font-size: 0.9rem;
+                padding: 10px 12px;
+            }
+
+            .tier-packages .pkg-name {
+                font-size: 0.9rem;
+            }
+
+            .tier-packages .pkg-price {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages .pkg-save {
+                font-size: 0.7rem;
+                padding: 2px 6px;
+            }
+
+            .tier-cta {
+                font-size: 0.9rem;
+                padding: 14px 20px;
+            }
+
+            /* All Access hero card */
+            .all-access-hero {
+                padding: 20px 16px;
+            }
+
+            .all-access-hero-title {
+                font-size: 1.25rem;
+            }
+
+            .all-access-price {
+                font-size: 1.5rem;
+            }
+        }
 
         .pricing-tiers {
                 grid-template-columns: 1fr 1fr;
@@ -3064,6 +3176,62 @@
             }
         }
 
+        /* 320px small screen pricing fix */
+        @media (max-width: 400px) {
+            .pricing-tier-new {
+                padding: 24px 16px;
+                border-radius: 12px;
+            }
+
+            .tier-name {
+                font-size: 1.25rem;
+            }
+
+            .tier-price-main .price-amount {
+                font-size: 2rem;
+            }
+
+            .tier-price-main .price-from,
+            .tier-price-main .price-period {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages li {
+                font-size: 0.9rem;
+                padding: 10px 12px;
+            }
+
+            .tier-packages .pkg-name {
+                font-size: 0.9rem;
+            }
+
+            .tier-packages .pkg-price {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages .pkg-save {
+                font-size: 0.7rem;
+                padding: 2px 6px;
+            }
+
+            .tier-cta {
+                font-size: 0.9rem;
+                padding: 14px 20px;
+            }
+
+            /* All Access hero card */
+            .all-access-hero {
+                padding: 20px 16px;
+            }
+
+            .all-access-hero-title {
+                font-size: 1.25rem;
+            }
+
+            .all-access-price {
+                font-size: 1.5rem;
+            }
+        }
 
         .pricing-tiers {
                 grid-template-columns: 1fr;
