perf(05-01): add width/height attributes to all images
- logo-star.png: 854x788 (nav and footer)
- classroom-teaching.jpg: 800x533 (hero)
- classroom-students.jpg: 800x533 (about)
- chris.jpg, nathan.jpg, taehoon.jpg, john.jpg: 400x400 (team)

Prevents CLS by allowing browser to reserve space before load

--- a/index.html
+++ b/index.html
@@ -4556,7 +4556,7 @@
         <div class="container">
             <div class="nav-inner">
                 <a href="#" class="logo" aria-label="BEAM Academy home">
-                    <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true">
+                    <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788">
                     BEAM Academy
                 </a>
                 <ul class="nav-links">
@@ -4616,7 +4616,7 @@
                     </div>
                     <div class="hero-visual">
                         <div class="hero-card hero-image-card">
-                            <img src="images/classroom-teaching.jpg" alt="BEAM Academy tutor teaching arithmetic sequences" loading="eager">
+                            <img src="images/classroom-teaching.jpg" alt="BEAM Academy tutor teaching arithmetic sequences" loading="eager" width="800" height="533">
                         </div>
                         <div class="floating-card card-1" aria-hidden="true">
                             <div class="floating-card-icon">📚</div>
@@ -4637,7 +4637,7 @@
                 <div class="about-content">
                     <div class="about-image">
                         <div class="about-image-main about-photo">
-                            <img src="images/classroom-students.jpg" alt="Students engaged in a BEAM Academy tutoring session" loading="lazy">
+                            <img src="images/classroom-students.jpg" alt="Students engaged in a BEAM Academy tutoring session" loading="lazy" width="800" height="533">
                         </div>
                         <div class="about-badge">
                             <div class="about-badge-number">BHHS</div>
@@ -5287,7 +5287,7 @@
                 <div class="team-grid">
                     <article class="team-card">
                         <div class="team-image">
-                            <img src="images/chris.jpg" alt="Chris Kim - Head of Mathematics" loading="lazy">
+                            <img src="images/chris.jpg" alt="Chris Kim - Head of Mathematics" loading="lazy" width="400" height="400">
                         </div>
                         <h3>Chris Kim</h3>
                         <p class="team-role">Head of Mathematics</p>
@@ -5300,7 +5300,7 @@
                     </article>
                     <article class="team-card">
                         <div class="team-image">
-                            <img src="images/nathan.jpg" alt="Nathan You - Tutor" loading="lazy">
+                            <img src="images/nathan.jpg" alt="Nathan You - Tutor" loading="lazy" width="400" height="400">
                         </div>
                         <h3>Nathan You</h3>
                         <p class="team-role">Tutor</p>
@@ -5313,7 +5313,7 @@
                     </article>
                     <article class="team-card">
                         <div class="team-image">
-                            <img src="images/taehoon.jpg" alt="Taehoon Kim - Tutor & Head Admin" loading="lazy" class="position-top">
+                            <img src="images/taehoon.jpg" alt="Taehoon Kim - Tutor & Head Admin" loading="lazy" class="position-top" width="400" height="400">
                         </div>
                         <h3>Taehoon Kim</h3>
                         <p class="team-role">Tutor & Head Admin</p>
@@ -5326,7 +5326,7 @@
                     </article>
                     <article class="team-card">
                         <div class="team-image">
-                            <img src="images/john.jpg" alt="John Park - Tutor" loading="lazy">
+                            <img src="images/john.jpg" alt="John Park - Tutor" loading="lazy" width="400" height="400">
                         </div>
                         <h3>John Park</h3>
                         <p class="team-role">Tutor</p>
@@ -5646,7 +5646,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <a href="#" class="logo" aria-label="BEAM Academy home">
-                        <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true">
+                        <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788">
                         BEAM Academy
                     </a>
                     <p>Expert tutoring for Years 7-12 by Baulkham Hills High School graduates achieving 95%+ in HSC Mathematics.</p>
