--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="image" href="images/classroom-teaching.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Source+Serif+4:opsz,wght@8..60,400;8..60,500;8..60,600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -4616,7 +4617,7 @@
                     </div>
                     <div class="hero-visual">
                         <div class="hero-card hero-image-card">
-                            <img src="images/classroom-teaching.jpg" alt="BEAM Academy tutor teaching arithmetic sequences" loading="eager" width="800" height="533">
+                            <img src="images/classroom-teaching.jpg" alt="BEAM Academy tutor teaching arithmetic sequences" loading="eager" width="800" height="533" fetchpriority="high">
                         </div>
                         <div class="floating-card card-1" aria-hidden="true">
                             <div class="floating-card-icon">📚</div>
