--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       gtag('js', new Date());
       gtag('config', 'AW-17832807956');
     </script>
+    <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="image" href="images/classroom-teaching.jpg">
