perf(05-04): add lazy loading to logo images
- Add loading="lazy" to defer logo download
- Add decoding="async" for non-blocking decode
- Applied to both header (line 4562) and footer (line 5652) logos

--- a/index.html
+++ b/index.html
@@ -4559,7 +4559,7 @@
         <div class="container">
             <div class="nav-inner">
                 <a href="#" class="logo" aria-label="BEAM Academy home">
-                    <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788">
+                    <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788" loading="lazy" decoding="async">
                     BEAM Academy
                 </a>
                 <ul class="nav-links">
@@ -5649,7 +5649,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <a href="#" class="logo" aria-label="BEAM Academy home">
-                        <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788">
+                        <img src="logo-star.png" alt="" class="logo-img" aria-hidden="true" width="854" height="788" loading="lazy" decoding="async">
                         BEAM Academy
                     </a>
                     <p>Expert tutoring for Years 7-12 by Baulkham Hills High School graduates achieving 95%+ in HSC Mathematics.</p>
