fix(05-03): fix JavaScript syntax error (escaped backslash)
- Removed invalid backslash before ! in mobile menu close handler
- Line 5800: changed \!isClickInside to !isClickInside
- Resolves JavaScript SyntaxError on page load

--- a/index.html
+++ b/index.html
@@ -5797,7 +5797,7 @@
         // Close mobile menu on outside click
         document.addEventListener('click', (e) => {
             const isClickInside = mobileNav.contains(e.target) || mobileToggle.contains(e.target);
-            if (\!isClickInside && mobileNav.classList.contains('active')) {
+            if (!isClickInside && mobileNav.classList.contains('active')) {
                 mobileNav.classList.remove('active');
                 mobileToggle.setAttribute('aria-expanded', 'false');
             }
