fix: repair corrupted closing tags (?? → </)

--- a/index.html
+++ b/index.html
@@ -4608,10 +4608,10 @@
                             Personalised learning in Epping, Sydney.
                         </p>
                         <div class="hero-buttons">
-                            <a href="#contact" class="btn btn-primary">Start Free Trial ??/a>
+                            <a href="#contact" class="btn btn-primary">Start Free Trial </a>
                             <a href="#courses" class="btn btn-secondary">View Courses</a>
                         </div>
-                        <p class="hero-returning"><a href="#contact" data-action="pay">Already enrolled? Pay for your term here ??/a></p>
+                        <p class="hero-returning"><a href="#contact" data-action="pay">Already enrolled? Pay for your term here </a></p>
                         <div class="hero-testimonial">
                             <span class="testimonial-star">5.0</span>
                             <span>"The teachers explain everything so well." - Luke K, Year 8</span>
@@ -4626,7 +4626,7 @@
                             <div class="floating-card-text">Medical Students</div>
                         </div>
                         <div class="floating-card card-2" aria-hidden="true">
-                            <div class="floating-card-icon">??/div>
+                            <div class="floating-card-icon"></div>
                             <div class="floating-card-text">Personalised Plans</div>
                         </div>
                     </div>
@@ -4698,7 +4698,7 @@
                             <div class="all-access-price-label">Years 11-12</div>
                             <div class="all-access-price">$500<span>/wk</span></div>
                         </div>
-                        <span class="all-access-hero-cta">Get All Access ??/span>
+                        <span class="all-access-hero-cta">Get All Access </span>
                     </div>
                 </div>
 
@@ -4915,7 +4915,7 @@
                             </div>
                             <span class="course-class-size">?뫁 Max 8</span>
                         </div>
-                        <div class="course-icon" aria-hidden="true">??/div>
+                        <div class="course-icon" aria-hidden="true"></div>
                         <h3>Years 9-10 Physics</h3>
                         <p>Build strong foundations in mechanics, waves, and energy. Early preparation for senior Physics success.</p>
                         <div class="course-card-footer">
@@ -5034,7 +5034,7 @@
                             </div>
                             <span class="course-class-size">?뫁 Max 8</span>
                         </div>
-                        <div class="course-icon" aria-hidden="true">??/div>
+                        <div class="course-icon" aria-hidden="true"></div>
                         <h3>Physics</h3>
                         <p>Strengthen analytical and scientific capability through rigorous in-depth syllabus coverage.</p>
                         <div class="course-card-footer">
@@ -5153,7 +5153,7 @@
                             </div>
                             <span class="course-class-size">?뫁 Max 8</span>
                         </div>
-                        <div class="course-icon" aria-hidden="true">??/div>
+                        <div class="course-icon" aria-hidden="true"></div>
                         <h3>Physics</h3>
                         <p>Clear explanations of complex concepts with practical problem-solving practice for HSC success.</p>
                         <div class="course-card-footer">
@@ -5512,7 +5512,7 @@
                             <!-- Free Trial Path -->
                             <div id="newStudentPath" class="student-path active">
                                 <div class="path-card trial-path">
-                                    <div class="path-icon">??/div>
+                                    <div class="path-icon"></div>
                                     <h4>Try Before You Commit</h4>
                                     <p>Your first lesson is completely free. Fill in your details below and we'll be in touch to schedule.</p>
                                     <div class="path-note">No payment required</div>
@@ -5530,7 +5530,7 @@
                                     <p>For students enrolling after their trial, or returning for a new term. Includes automatic 5% discount.</p>
                                     <div class="price-display">
                                         <span class="original-price" id="originalPrice">$200/wk</span>
-                                        <span class="arrow-icon">??/span>
+                                        <span class="arrow-icon"></span>
                                         <span class="discounted-price" id="discountedPrice">$209/wk inc. GST</span>
                                     </div>
                                 </div>
@@ -5593,12 +5593,12 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary form-submit btn-trial" id="trialSubmitBtn" style="display: flex;">
-                            <span class="btn-text"><span id="submitBtnText">Book Your Free Trial</span> ??/span>
+                            <span class="btn-text"><span id="submitBtnText">Book Your Free Trial</span> </span>
                             <span class="btn-loading"><span class="spinner"></span> Processing...</span>
                         </button>
                         
                         <button type="button" class="btn btn-primary form-submit btn-pay" id="paySubmitBtn" style="display: none;">
-                            <span class="btn-text">Pay Now & Save 5% ??/span>
+                            <span class="btn-text">Pay Now & Save 5% </span>
                             <span class="btn-loading"><span class="spinner"></span> Redirecting to Checkout...</span>
                         </button>
                         
@@ -5618,7 +5618,7 @@
             <div class="container">
                 <h2 id="cta-title">Ready to Shine Brighter?</h2>
                 <p>Join BEAM Academy today and experience the difference expert tutoring can make.</p>
-                <a href="#contact" class="btn btn-primary">Start Your Free Trial ??/a>
+                <a href="#contact" class="btn btn-primary">Start Your Free Trial </a>
             </div>
         </section>
 
