--- a/index.html
+++ b/index.html
@@ -168,6 +168,40 @@
 
         html {
             scroll-behavior: smooth;
+            -webkit-text-size-adjust: 100%;
+            text-size-adjust: 100%;
+        }
+
+        /* Mobile viewport fixes */
+        html, body {
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
+        img, video, iframe {
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* Touch target accessibility (44px minimum per Apple HIG) */
+        a, button, [role="button"],
+        input[type="submit"], input[type="button"], input[type="reset"],
+        .btn, .nav-link, .nav-cta, .mobile-toggle,
+        .year-tab, .package-card, .faq-question {
+            min-height: 44px;
+            min-width: 44px;
+        }
+
+        input, textarea, select, button {
+            font-size: 16px;
+            min-height: 44px;
+            touch-action: manipulation;
+        }
+
+        @media (hover: none) and (pointer: coarse) {
+            a, button, .btn {
+                -webkit-tap-highlight-color: rgba(124, 58, 237, 0.2);
+            }
         }
 
         @media (prefers-reduced-motion: reduce) {
