feat(03-01): make email and year level optional
- Remove required attribute from parentEmail
- Remove required attribute from yearLevel
- Update labels to show '(optional)' indicator

--- a/index.html
+++ b/index.html
@@ -5327,8 +5327,8 @@
                                 <input type="text" id="parentName" name="parentName" class="form-input" required placeholder="Parent's full name">
                             </div>
                             <div class="form-group">
-                                <label for="parentEmail" class="form-label">Email *</label>
-                                <input type="email" id="parentEmail" name="parentEmail" class="form-input" required placeholder="parent@email.com">
+                                <label for="parentEmail" class="form-label">Email (optional)</label>
+                                <input type="email" id="parentEmail" name="parentEmail" class="form-input" placeholder="parent@email.com">
                             </div>
                         </div>
                         <div class="form-row">
@@ -5342,8 +5342,8 @@
                         <!-- Year Level dropdown (shown only when no package selected) -->
                         <div class="form-row" id="manualSelectionRow">
                             <div class="form-group">
-                                <label for="yearLevel" class="form-label">Year Level *</label>
-                                <select id="yearLevel" name="yearLevel" class="form-select" required>
+                                <label for="yearLevel" class="form-label">Year Level (optional)</label>
+                                <select id="yearLevel" name="yearLevel" class="form-select">
                                     <option value="">Select year level</option>
                                     <option value="Year 7">Year 7</option>
                                     <option value="Year 8">Year 8</option>
