--- a/index.html
+++ b/index.html
@@ -5324,17 +5324,17 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="parentName" class="form-label">Name *</label>
-                                <input type="text" id="parentName" name="parentName" class="form-input" required placeholder="Parent's full name">
+                                <input type="text" id="parentName" name="parentName" class="form-input" required placeholder="Your full name" autocomplete="name" autocorrect="off">
                             </div>
                             <div class="form-group">
                                 <label for="parentEmail" class="form-label">Email (optional)</label>
-                                <input type="email" id="parentEmail" name="parentEmail" class="form-input" placeholder="parent@email.com">
+                                <input type="email" id="parentEmail" name="parentEmail" class="form-input" placeholder="your@email.com" autocomplete="email" inputmode="email" autocapitalize="off" autocorrect="off">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="parentPhone" class="form-label">Phone *</label>
-                                <input type="tel" id="parentPhone" name="parentPhone" class="form-input" required placeholder="04XX XXX XXX">
+                                <input type="tel" id="parentPhone" name="parentPhone" class="form-input" required placeholder="04XX XXX XXX" autocomplete="tel" inputmode="tel">
                             </div>
                             <div class="form-group"></div>
                         </div>
