feat(04-01): add inline testimonial to hero section
- Add hero-testimonial div with 5.0 rating badge and Luke K quote
- Add CSS styling with purple accent background and pill badge
- Add mobile responsive styles for smaller screens

--- a/index.html
+++ b/index.html
@@ -733,6 +733,28 @@
             text-decoration: underline;
         }
 
+        .hero-testimonial {
+            margin-top: 24px;
+            padding: 12px 20px;
+            background: rgba(124, 58, 237, 0.08);
+            border-radius: 8px;
+            font-size: 0.95rem;
+            color: var(--gray-600);
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            border: 1px solid rgba(124, 58, 237, 0.15);
+        }
+
+        .hero-testimonial .testimonial-star {
+            background: var(--purple-600);
+            color: white;
+            padding: 4px 10px;
+            border-radius: 100px;
+            font-weight: 600;
+            font-size: 0.85rem;
+        }
+
         .hero-visual {
             position: relative;
             animation: fadeIn 1s ease 0.3s both;
@@ -3104,6 +3126,11 @@
             .hero-buttons .btn-primary {
                 padding: 16px 24px;
                 font-size: 1.1rem;
+            }
+
+            .hero-testimonial {
+                font-size: 0.9rem;
+                padding: 10px 16px;
             }
 
             section { padding: 60px 0; }
