--- a/index.html
+++ b/index.html
@@ -3083,10 +3083,67 @@
                 grid-template-columns: 1fr;
                 max-width: 400px;
             }
-            
+
             .pricing-tier-new.featured-tier {
                 transform: none;
                 order: -1;
+            }
+        }
+
+        /* 320px small screen pricing fix */
+        @media (max-width: 400px) {
+            .pricing-tier-new {
+                padding: 24px 16px;
+                border-radius: 12px;
+            }
+
+            .tier-name {
+                font-size: 1.25rem;
+            }
+
+            .tier-price-main .price-amount {
+                font-size: 2rem;
+            }
+
+            .tier-price-main .price-from,
+            .tier-price-main .price-period {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages li {
+                font-size: 0.9rem;
+                padding: 10px 12px;
+            }
+
+            .tier-packages .pkg-name {
+                font-size: 0.9rem;
+            }
+
+            .tier-packages .pkg-price {
+                font-size: 0.85rem;
+            }
+
+            .tier-packages .pkg-save {
+                font-size: 0.7rem;
+                padding: 2px 6px;
+            }
+
+            .tier-cta {
+                font-size: 0.9rem;
+                padding: 14px 20px;
+            }
+
+            /* All Access hero card */
+            .all-access-hero {
+                padding: 20px 16px;
+            }
+
+            .all-access-hero-title {
+                font-size: 1.25rem;
+            }
+
+            .all-access-price {
+                font-size: 1.5rem;
             }
         }
 
