feat(06-02): replace hero image with portal mockup HTML
- Replace classroom image with portal mockup structure
- Add performance dashboard with Current Score section
- Add Topic Breakdown with color-coded scores (Algebra 92%, Trigonometry 71%, Calculus 64%)
- Add Weak Topics section showing specific areas for improvement
- Remove floating cards (Medical Students, Personalised Plans)

--- a/index.html
+++ b/index.html
@@ -4508,16 +4508,46 @@
                         </div>
                     </div>
                     <div class="hero-visual">
-                        <div class="hero-card hero-image-card">
-                            <img src="images/classroom-teaching.jpg" alt="BEAM Academy tutor teaching arithmetic sequences" width="800" height="533" loading="eager" fetchpriority="high">
-                        </div>
-                        <div class="floating-card card-1" aria-hidden="true">
-                            <div class="floating-card-icon">📚</div>
-                            <div class="floating-card-text">Medical Students</div>
-                        </div>
-                        <div class="floating-card card-2" aria-hidden="true">
-                            <div class="floating-card-icon">✨</div>
-                            <div class="floating-card-text">Personalised Plans</div>
+                        <div class="hero-card hero-portal-mockup">
+                            <div class="hero-mockup-header">
+                                <div class="hero-mockup-dots" aria-hidden="true">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                                <div class="hero-mockup-title">Performance Dashboard</div>
+                            </div>
+                            <div class="hero-mockup-content">
+                                <div class="hero-mockup-section">
+                                    <div class="hero-mockup-label">Current Score</div>
+                                    <div class="hero-mockup-score">
+                                        <span class="score-value">78%</span>
+                                        <span class="score-badge score-yellow">Needs Practice</span>
+                                    </div>
+                                </div>
+                                <div class="hero-mockup-section">
+                                    <div class="hero-mockup-label">Topic Breakdown</div>
+                                    <div class="hero-mockup-row">
+                                        <span>Algebra</span>
+                                        <span class="score-green">92%</span>
+                                    </div>
+                                    <div class="hero-mockup-row">
+                                        <span>Trigonometry</span>
+                                        <span class="score-yellow">71%</span>
+                                    </div>
+                                    <div class="hero-mockup-row">
+                                        <span>Calculus</span>
+                                        <span class="score-red">64%</span>
+                                    </div>
+                                </div>
+                                <div class="hero-mockup-section hero-mockup-weak">
+                                    <div class="hero-mockup-label">Weak Topics</div>
+                                    <div class="hero-mockup-tags">
+                                        <span class="weak-tag">Calculus - Derivatives</span>
+                                        <span class="weak-tag">Trigonometry - Identities</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
